# antonov_test

./: README.md
bot_docker/: Dockerfile  orders.sql
bot_docker/trading_robot/: config.json  pyproject.toml
bot_docker/trading_robot/tests/: test_trading_robot.py
bot_docker/trading_robot/trading_robot/: robot.py  start.py
